# QFRsch

./: ANALYSIS_GUIDE.md  ANALYSIS_QUICK_START.md  ANALYSIS_SUMMARY.md  BACKTEST_GUIDE.md  README.md  main.py  pyproject.toml
docs/: tutorial.md
examples/: analysis_example.py  backtest_example.py  validate_wrds.py
examples/wrds/: strategy_report.html  wrds-analysis-01.ipynb
examples/wrds-backtests/: backtest_parameters.txt  vub0jsn2qlk3mtvt.csv
src/qfrsch/analysis/: __init__.py  attribution.py  factor_eval.py  metrics.py  reporter.py
src/qfrsch/backtest/: __init__.py  engine.py  models.py  utils.py
src/qfrsch/core/: calendars.py
src/qfrsch/factors/: alpha_zoo.py  base.py  operators.py  processor.py  styles.py
src/qfrsch/models/: __init__.py  base.py
src/qfrsch/pipeline/: __init__.py  manager.py  strategies.py
src/qfrsch/utils/: helpers.py
test/: conftest.py  test_configs.py
test/cases/: test_alpha_zoo.py  test_analysis.py  test_backtest.py  test_base.py  test_calendars.py  test_helpers.py  test_models.py  test_operators.py  test_pipeline.py  test_processor.py  test_strategies.py  test_styles.py
test/sample_data/: checkdatewrds.py  download_wrds.py  wrds.ipynb
