[project]
name = "qfrsch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.4.2",
    "pandas>=3.0.1",
    "pandas-market-calendars>=5.3.0",
    "plotly>=6.5.2",
    "scikit-learn>=1.8.0",
    "statsmodels>=0.14.6",
    "xgboost>=3.2.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
